<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/identify_the_car_make"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchGameActivity"
        android:rotationX="0"
        android:text="@string/identify_the_car_make"
        android:textSize="18sp"
        android:textStyle="italic"
        app:backgroundTint="#295B83"
        app:layout_constraintBottom_toTopOf="@+id/identify_the_car_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hints"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchGameActivity"
        android:text="@string/hints"
        android:textSize="18sp"
        android:textStyle="italic"
        app:backgroundTint="#295B83"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/identify_the_car_image"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchGameActivity"
        android:rotationX="0"
        android:text="@string/identify_the_car_image"
        android:textSize="18sp"
        android:textStyle="italic"
        app:backgroundTint="#295B83"
        app:layout_constraintBottom_toTopOf="@+id/advanced_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/advanced_level"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/archivo_black"
        android:onClick="launchGameActivity"
        android:rotationX="0"
        android:text="@string/advanced_level"
        android:textSize="18sp"
        android:textStyle="italic"
        app:backgroundTint="#295B83"
        app:layout_constraintBottom_toTopOf="@+id/hints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/timer_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:includeFontPadding="false"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/timer"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="395dp"
        android:layout_height="276dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_switch"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>